add header support on build_home

--- a/module/f.hello_world/test/Makefile
+++ b/module/f.hello_world/test/Makefile
@@ -7,7 +7,7 @@ all test: prelude
 .PHONY: prelude
 prelude:
 	sh $(FT_BASE_PATH)/script/resolve.sh
-	sh $(FT_BASE_PATH)/script/build_home.sh $(SRCS)
+	sh $(FT_BASE_PATH)/script/build_home.sh $(SRCS) $(INCS)
 	(cd .ft/home && $(MAKE) executable.exe)
 
 fclean:
